files/service_lb.yml
apiVersion: v1
kind: Service
metadata:
  
  name: rhel7-test-vm-az-a-clone-svc-lb
  namespace: post-upgrade-testing
  annotations:
    metallb.universe.tf/address-pool: default
  labels:
    environment: ansible-test-rhel7-test-vm-az-a
spec:
  selector:
  
    kubevirt.io/domain: rhel7-test-vm-az-a-clone
  ports:
    - port: 22
      targetPort: 22
      protocol: TCP
      name: ssh
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: LoadBalancer
